# AoC_nix

./: .gitignore  Main.hs  aoc.cabal  flake.nix  hie.yaml  package.yaml  readme.org
.github/workflows/: ci.yaml
src/: Day1.hs  Lib.hs
src/Y2020/: Day1.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs
src/Y2021/: Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs
src/Y2022/: Day1.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs
test/Y2021/: Day10Spec.hs  Day11Spec.hs  Day8Spec.hs
